# Godot-MCP

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  SECURITY.md  project.godot
.github/workflows/: analyzer.yml  backup.yml  ci.yml
.rust/: Cargo.toml
addons/rust-gdextension/: README.md  rust.gdextension.disabled
config/: default.yaml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/tests/: config_load.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/godot/: Cargo.toml
crates/godot/src/: lib.rs  scene_validate.rs  script_lint.rs  signal_validate.rs  structure_fix.rs
crates/godot/tests/: addon_plugin_cfg.rs  analyze_smoke.rs  icon_and_main_scene.rs  junit_scene_classname.rs  missing_ext_resource.rs  outputs_sanity.rs  scene_extresource_props.rs  scene_issues_as_report.rs  scene_subresource_and_preload.rs  scene_validate.rs  script_lint.rs  script_lint_suppression.rs  signal_graph.rs  signal_method_checks.rs  signal_validate.rs  structure_fix.rs  structure_fix_apply.rs  structure_fix_plan.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/index/tests/: smoke.rs  update_delete.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs
crates/mcp-server/tests/: bundle_integration.rs
crates/tools/: Cargo.toml
crates/tools/src/: autodoc.rs  lib.rs  metatagger.rs
crates/tools/tests/: autodoc_idempotent.rs  autodoc_smoke.rs  metatagger_baseline.rs  metatagger_smoke.rs
docs/: CLOSE_TO_SHORE.md  DEV_LOG.md  GDSCRIPT_LINT.md  GODOT_MCP_SPECIFICATION.md  METATAGGER.md  PROJECT_INDEX.md  README.md  ROADMAP_DETAILED.md  RUSTED_GUTS_DETAILED_SPECIFICATION.md  SCENE_VALIDATOR.md  SIGNAL_VALIDATOR.md  STRUCTURE_FIX.md  STYLE_GUIDE.md  TAVILY_PROTOCOL.md  TEST_POLICY.md  WORKFLOW_PROJECT.md
docs/GODOT_ENGINE_DOCS/: 404.html  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/GODOT_ENGINE_DOCS/about/: complying_with_licenses.html  docs_changelog.html  faq.html  introduction.html  list_of_features.html  release_policy.html  system_requirements.html
docs/GODOT_ENGINE_DOCS/classes/: class_@gdscript.html  class_@globalscope.html  class_aabb.html  class_acceptdialog.html  class_aescontext.html  class_aimmodifier3d.html  class_animatablebody2d.html  class_animatablebody3d.html  class_animatedsprite2d.html  class_animatedsprite3d.html  class_animatedtexture.html  class_animation.html  (+1002 more)
docs/GODOT_RUST_GDEXT/: all.html  index.html
docs/GUT_DOCS/: README.md
docs/examples/: .metatagger.baseline.json  .metataggerignore
examples/: README.md
examples/2d/: CharacterBody2D.tscn  character_body_2d.gd  character_body_2d.gd.uid
examples/3d/: Node3D.tscn  node3d_example.gd  node3d_example.gd.uid
examples/autoload/: Global.gd  Global.gd.uid
examples/physics2d/: Physics2D.tscn  physics2d_example.gd  physics2d_example.gd.uid
examples/resource/: ItemData.gd  ItemData.gd.uid  ItemDataSample.tres
examples/signals/: SignalsDemo.tscn  signals_demo.gd  signals_demo.gd.uid
examples/templates/: Template.gd  Template.gd.uid  template.py  template.rs
examples/ui/: UIExample.tscn  ui_example.gd  ui_example.gd.uid
rust-book/: index.etag  index.html
scripts/: backup_local.sh  backup_remote.sh
(+540 files in other folders)
