[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }

#EOF