[package]
name = "context"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "context"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
index = { path = "../index" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

#EOF
