[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
index = { path = "../index" }
context = { path = "../context" }

#EOF