[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
index = { path = "../index" }
context = { path = "../context" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http = "0.2"
hyper = { version = "1", features = ["client", "http1", "http2"] }

#EOF