[package]
name = "tools"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
tracing = "0.1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }

common = { path = "../common" }

[dev-dependencies]
tempfile = "3"
